crates/plotnik-tests/tests/04-emit/types/captures/builtin_does_not_legalize_raw_union.txt
Q = [
  (identifier) @x :: str
  {
    (identifier) @id
  } @x :: str
]
------------------ DIAGNOSTICS -------------------
error: capture `@x` has incompatible types across branches
 --> query.ptk:2:16
  |
2 |   (identifier) @x :: str
  |                ^^
...
5 |   } @x :: str
  |     -- and a different type here
  |
help: make every branch produce the same type, or label the branches for an enum
